# miswag-dbt-lineage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  release-notes-v0.1.5.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  test.yml
miswag_dbt_lineage/: __init__.py  extractor.py  generator.py
miswag_dbt_lineage/cli/: __init__.py  main.py
miswag_dbt_lineage/static/: __init__.py
miswag_dbt_lineage/static/templates/: index.html
tests/: __init__.py  conftest.py  test_cli.py  test_extractor.py  test_generator.py
